tests/baselines/reference/accessorParameterAccessibilityModifier(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
accessorParameterAccessibilityModifier.ts(2,11): error TS2369: A parameter property is only allowed in a constructor implementation.
accessorParameterAccessibilityModifier.ts(3,18): error TS2369: A parameter property is only allowed in a constructor implementation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== accessorParameterAccessibilityModifier.ts (2 errors) ====
    class C {
        set X(public v) { }
              ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        static set X(public v2) { }
                     ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }